[Fixed] Overflowing content on mobile size.

--- a/resources/karavancentrum-hu/site/css/site.css
+++ b/resources/karavancentrum-hu/site/css/site.css
@@ -355,6 +355,10 @@
   width: 100%;
 }
 
+.kc-vehicle-card[data-private=true] {
+  opacity: 0.5;
+}
+
 @media only screen and (max-width: 620px) {
 .kc-vehicle-card {
   border-radius: 0;
@@ -595,14 +599,14 @@
 .mt-contacts--contact-group {
   display: flex;
   flex-direction: column;
-  width: 500px;
+  max-width: 500px;
   padding-bottom: 30px;
 }
 
 #mt-contacts--address-data-information,
 #mt-contacts--contacts-data-information {
   margin-bottom: 30px;
-  min-width: 500px;
+  max-width: 500px;
 }
 
 .mt-contacts--address-data-information,
@@ -692,7 +696,7 @@
   padding: 24px;
   border-radius: 10px;
   background-color: white;
-  width: 1024px;
+  max-width: 1024px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -706,7 +710,7 @@
   border-radius: 10px;
   margin-top: 150px;
   overflow: hidden;
-  width: 1024px;
+  max-width: 1024px;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -739,7 +743,7 @@
   display: flex;
   font-size: var(--font-size-s);
   padding: 24px;
-  width: 1024px;
+  max-width: 1024px;
 }
 
 /***** Pages *****/
@@ -764,6 +768,7 @@
   font-weight: 600;
   gap: 30px;
   justify-content: center;
+  flex-wrap: wrap;
   letter-spacing: 1.5px;
   padding: 25px 0 10px 0;
   text-transform: uppercase;
